name: money
version: 0.1
license: BSD3
license-file: LICENSE
copyright: Copyright (c) Renzo Carbonara 2016
author: Renzo Carbonara
maintainer: renλren!zone
stability: Experimental
tested-with: GHC==8.0.1
homepage: https://github.com/k0001/haskell-money
bug-reports: https://github.com/k0001/haskell-money/issues
category: Money
build-type: Simple
cabal-version: >=1.10
extra-source-files: README.md changelog.md
synopsis: Type-safe encoding and manipulation of world currencies and precious metals.
description: Type-safe encoding and manipulation of world currencies and precious metals.

source-repository head
  type: git
  location: https://github.com/k0001/haskell-money

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Data.Money
  ghc-options: -Wall -O2
  build-depends:
      base (>=4.5 && <5.0)
    , scientific (>=0.3 && <0.4)

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends:
     base
   , money
   , scientific
   , tasty
   , tasty-hunit
   , tasty-quickcheck
