name: safe-money
version: 0.1
license: BSD3
license-file: LICENSE
copyright: Copyright (c) Renzo Carbonara 2016
author: Renzo Carbonara
maintainer: renλren!zone
stability: Experimental
tested-with: GHC==8.0.1
homepage: https://github.com/k0001/safe-money
bug-reports: https://github.com/k0001/safe-money/issues
category: Money
build-type: Simple
cabal-version: >=1.10
extra-source-files: README.md changelog.md
synopsis: Type-safe and lossless encoding and manipulation of money, world currencies and precious metals.
description: Type-safe and lossless encoding and manipulation of money, world currencies and precious metals.

source-repository head
  type: git
  location: https://github.com/k0001/safe-money

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -O2
  exposed-modules:
      Data.Money
      Data.Money.Internal
  build-depends:
      base (>=4.8)
    , constraints (>= 0.6)

  if flag(aeson)
    build-depends: aeson (>=0.9)
  if flag(binary)
    build-depends: binary (>=0.7)
  if flag(cereal)
    build-depends: cereal (>=0.5)
  if flag(deepseq)
    build-depends: deepseq (>=1.4)
  if flag(hashable)
    build-depends: hashable (>=1.2)
  if flag(store)
    build-depends: store (>=0.2)

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests src
  main-is: Main.hs
  build-depends:
     aeson
   , base
   , binary
   , bytestring
   , cereal
   , constraints
   , deepseq
   , hashable
   , store
   , tasty
   , tasty-hunit
   , tasty-quickcheck

-- Provide instances for @aeson@
flag aeson
  default: True
  manual: True
-- Provide instances for @binary@
flag binary
  default: True
  manual: True
-- Provide instances for @cereal@
flag cereal
  default: True
  manual: True
-- Provide instances for @store@
flag store
  default: True
  manual: True
-- Provide instances for @hashable@
flag hashable
  default: True
  manual: True
-- Provide instances for @deepseq@
flag deepseq
  default: True
  manual: True

